--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -15,7 +15,6 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="#689D6A"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
 
@@ -31,6 +30,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_dialog_email"
-        android:backgroundTint="#689D6A"/>
+        android:backgroundTint="#008477"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
