--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -50,7 +50,7 @@
                 android:id="@+id/Text_header"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Selamat datang, 2IA01!"
+                android:text="Selamat datang, Kelompok 4!"
                 android:layout_marginTop="10dp"
                 android:paddingLeft="10dp"
                 android:textColor="@color/putih"
