--- a/app/src/main/res/layout/activity_storage.xml
+++ b/app/src/main/res/layout/activity_storage.xml
@@ -13,6 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
+        android:background="@color/gruv_bg2"
+        android:textColor="@color/gruv_fg"
+
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="150dp"
 
@@ -26,6 +29,8 @@
         android:layout_height="wrap_content"
         android:src="@drawable/folder_img_foreground"
 
+        android:background="@color/gruv_aqua"
+
         android:layout_below="@id/input_data"
         android:layout_alignLeft="@id/input_data"
         android:layout_marginRight="210dp"
@@ -37,7 +42,9 @@
         android:layout_below="@id/save_internal"
         android:textAlignment="center"
         android:layout_alignRight="@id/save_internal"
-        android:layout_alignLeft="@id/save_internal"/>
+        android:layout_alignLeft="@id/save_internal"
+        android:textStyle="bold"
+        android:textColor="@color/gruv_fg"/>
 
     <ImageButton
         android:id="@+id/save_external"
@@ -45,8 +52,11 @@
         android:layout_height="wrap_content"
         android:src="@drawable/sdcard_img_foreground"
 
+        android:background="@color/gruv_aqua"
+
         android:layout_below="@id/input_data"
         android:layout_alignTop="@id/save_internal"
+        android:layout_alignBottom="@id/save_internal"
         android:layout_alignRight="@id/input_data"
         android:layout_marginLeft="210dp"
 
@@ -58,6 +68,8 @@
         android:layout_below="@id/save_external"
         android:textAlignment="center"
         android:layout_alignRight="@id/save_external"
-        android:layout_alignLeft="@id/save_external"/>
+        android:layout_alignLeft="@id/save_external"
+        android:textStyle="bold"
+        android:textColor="@color/gruv_fg"/>
 
 </RelativeLayout>
