--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,11 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="gruv_bg">#FBF1C7</color>
+    <color name="gruv_bg2">#F9F5D7</color>
+    <color name="gruv_fg">#3c3836</color>
+    <color name="gruv_grey">#7c6f64</color>
+    <color name="gruv_green">#98971a</color>
+    <color name="gruv_aqua">#689d6a</color>
 
     <color name="biru">#337dff</color>
     <color name="orange">#fca220</color>
