--- a/app/src/main/res/layout/activity_add_edit.xml
+++ b/app/src/main/res/layout/activity_add_edit.xml
@@ -35,6 +35,7 @@
         android:layout_below="@id/image1"
         android:text="Tambahkan Data"
         android:textSize="30sp"
+        android:textColor="@color/hitam"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp" />
@@ -47,65 +48,59 @@
         android:inputType="number"
         android:visibility="gone" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:id="@+id/name_input_layout"
+    <EditText
+        android:id="@+id/txt_name"
         android:layout_below="@id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="30dp"
-        android:hint="Input Nama">
+        android:hint="Input Nama"
+        android:padding="12dp"
+        android:elevation="2dp"
+        android:background="@drawable/edittext_background"
+        android:textColorHint="#888888" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txt_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:id="@+id/address_input_layout"
-        android:layout_below="@id/name_input_layout"
-        android:layout_marginTop="10dp"
+    <EditText
+        android:id="@+id/txt_address"
+        android:layout_below="@id/txt_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:hint="Input Alamat">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txt_address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+        android:layout_marginTop="15dp"
+        android:hint="Input Alamat"
+        android:padding="12dp"
+        android:elevation="2dp"
+        android:background="@drawable/edittext_background"
+        android:textColorHint="#888888" />
 
     <Button
         android:id="@+id/btn_submit"
         android:layout_width="150sp"
         android:layout_height="48dp"
-        android:layout_below="@id/address_input_layout"
-        android:layout_marginTop="20dp"
+        android:layout_below="@id/txt_address"
+        android:layout_marginTop="30dp"
         android:layout_marginLeft="45dp"
         android:background="@drawable/button_shape"
         android:text="Submit"
         android:textColor="@android:color/white"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:onClick="onSubmitButtonClick" />
 
     <Button
         android:id="@+id/btn_cancel"
         android:layout_width="150dp"
         android:layout_height="48dp"
-        android:layout_below="@id/address_input_layout"
+        android:layout_below="@id/txt_address"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:layout_toRightOf="@id/btn_submit"
         android:background="@drawable/button_shape"
         android:text="Cancel"
         android:textColor="@android:color/white"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:onClick="onCancelButtonClick" />
 
 </RelativeLayout>
