--- a/app/src/main/res/layout/activity_list_view.xml
+++ b/app/src/main/res/layout/activity_list_view.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:padding="10dp">
 
     <ImageView
         android:id="@+id/imgView"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:src="@mipmap/ic_launcher"
         android:scaleType="centerCrop"
         android:padding="5dp"
@@ -48,13 +48,5 @@
             android:layout_marginTop="4dp" />
 
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/arrow"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@drawable/arrow"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true" />
 
 </RelativeLayout>
