--- a/app/src/main/res/layout/activity_koneksi.xml
+++ b/app/src/main/res/layout/activity_koneksi.xml
@@ -11,6 +11,7 @@
         android:id="@+id/btnCheck"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:background="@color/gruv_grey2"
         android:src="@drawable/reload_foreground"
 
         android:layout_marginTop="200dp"
